@@ -4,7 +4,7 @@
 
 	<property file="${user.home}/.activiti/build.properties" />
 
-	<property name="activiti.version" value="5.13-SNAPSHOT" />
+	<property name="activiti.version" value="5.16" />
 	<property name="target.distro.root" value="target/zip/activiti-${activiti.version}" />
 	<property name="activiti.website" value="../../activiti-website" />
 
@@ -35,7 +35,7 @@
 			<equals arg1="${nodocs}" arg2="true" />
 		</condition>
 		<exec executable="${mvn.executable}" dir=".." failonerror="true">
-			<env key="MAVEN_OPTS" value="-Xmx1024m -Xms512m" />
+			<env key="MAVEN_OPTS" value="-Xmx1024m -Xms512m -XX:MaxPermSize=256M" />
 			<arg line="-Pdistro${nodocs.profile} clean install -Dmaven.test.skip=true" />
 		</exec>
 	</target>
@@ -57,36 +57,48 @@
 			<fileset dir="../modules/activiti-spring/target">
 				<include name="activiti-spring-*.jar" />
 			</fileset>
+			<fileset dir="../modules/activiti-spring-boot/target">
+				<include name="activiti-spring-boot-*.jar" />
+			</fileset>
 			<fileset dir="../modules/activiti-bpmn-model/target">
-        <include name="activiti-bpmn-model-*.jar" />
-      </fileset>
+				<include name="activiti-bpmn-model-*.jar" />
+			</fileset>
 			<fileset dir="../modules/activiti-bpmn-converter/target">
-        <include name="activiti-bpmn-converter-*.jar" />
-      </fileset>
+				<include name="activiti-bpmn-converter-*.jar" />
+			</fileset>
+		   	<fileset dir="../modules/activiti-process-validation/target">
+		        <include name="activiti-process-validation-*.jar" />
+		   	</fileset>
 			<fileset dir="../modules/activiti-bpmn-layout/target">
-        <include name="activiti-bpmn-layout-*.jar" />
-      </fileset>
+				<include name="activiti-bpmn-layout-*.jar" />
+			</fileset>
+			<fileset dir="../modules/activiti-image-generator/target">
+				<include name="activiti-image-generator-*.jar" />
+			</fileset>
 			<fileset dir="../modules/activiti-json-converter/target">
-        <include name="activiti-json-converter-*.jar" />
-      </fileset>
+				<include name="activiti-json-converter-*.jar" />
+			</fileset>
 			<fileset dir="../modules/activiti-simple-workflow/target">
-        <include name="activiti-simple-workflow-*.jar" />
-      </fileset>
+				<include name="activiti-simple-workflow-*.jar" />
+			</fileset>
+			<fileset dir="../modules/activiti-ldap/target">
+				<include name="activiti-ldap*.jar" />
+			</fileset>
 			<fileset dir="../modules/activiti-explorer/target">
-        <include name="activiti-explorer-*.jar" />
-      </fileset>
+				<include name="activiti-explorer-*.jar" />
+			</fileset>
 			<fileset dir="../modules/activiti-common-rest/target">
-        <include name="activiti-common-rest-*.jar" />
-      </fileset>
+				<include name="activiti-common-rest-*.jar" />
+			</fileset>
 			<fileset dir="../modules/activiti-modeler/target">
-        <include name="activiti-modeler-*.jar" />
-      </fileset>
+				<include name="activiti-modeler-*.jar" />
+			</fileset>
 			<fileset dir="../modules/activiti-diagram-rest/target">
-        <include name="activiti-diagram-rest-*.jar" />
-      </fileset>
+				<include name="activiti-diagram-rest-*.jar" />
+			</fileset>
 			<fileset dir="../modules/activiti-rest/target">
-        <include name="activiti-rest-*.jar" />
-      </fileset>
+				<include name="activiti-rest-*.jar" />
+			</fileset>
 			<fileset dir="../modules/activiti-camel/target">
 				<include name="activiti-camel-*.jar" />
 			</fileset>
@@ -101,6 +113,9 @@
 			</fileset>
 			<fileset dir="../modules/activiti-osgi/target">
 				<include name="activiti-osgi-*.jar" />
+			</fileset>
+			<fileset dir="../modules/activiti-crystalball/target">
+				<include name="activiti-crystalball-*.jar" />
 			</fileset>
 		</copy>
 
@@ -163,16 +178,16 @@
 			</fileset>
 		</copy>
 	</target>
-	
+
 	<target name="copy.sql">
-    <!-- COPY SQL -->
-    <copy todir="${target.distro.root}/database">
-      <fileset dir="../modules/activiti-engine/src/main/resources/org/activiti/db">
-        <include name="create/**" />
-      	<include name="drop/**" />
-      	<include name="upgrade/**" />
-      </fileset>
-    </copy>
-  </target>
+		<!-- COPY SQL -->
+		<copy todir="${target.distro.root}/database">
+			<fileset dir="../modules/activiti-engine/src/main/resources/org/activiti/db">
+				<include name="create/**" />
+				<include name="drop/**" />
+				<include name="upgrade/**" />
+			</fileset>
+		</copy>
+	</target>
 
 </project>
